# ghq

./: .gitignore  Cargo.toml  Makefile  README.md  agents.md  go.mod  go.sum
.demo/: file-picker.tape
cmd/gg/: main.go
cmd/ghq/: main.go
internal/cache/: cache.go  cache_test.go
internal/config/: config.go  config_test.go
internal/copilot/: copilot.go
internal/git/: commit.go  git.go  git_test.go  merge_base_test.go
internal/github/: cached.go  client.go  types.go
internal/inbox/: changes.go  changes_test.go  inbox.go  inbox_test.go
internal/localdiff/: comments.go  viewstate.go
internal/review/: anchor.go  anchor_test.go  session.go  session_test.go
internal/terminal/: browser.go  browser_test.go
rust/: Cargo.toml
rust/src/: error.rs  main.rs
rust/src/agent/: mod.rs  types.rs
rust/src/agent/copilot/: mod.rs
rust/src/cache/: persist.rs
rust/src/git/: commit.rs  diff.rs  mod.rs  stage.rs  watcher.rs
rust/src/github/: cached.rs  mod.rs  types.rs
rust/src/review/: comments.rs  mod.rs
rust/src/terminal/: browser.rs  palette.rs
rust/src/ui/: app.rs  composing_state.rs  copilot_state.rs  flash.rs  highlight.rs  hyperlink.rs  mod.rs  popup.rs  scroll.rs  styles.rs
rust/src/ui/chat/: mod.rs
rust/src/ui/command_bar/: mod.rs
rust/src/ui/components/: author.rs  diff_line.rs  file_tree.rs  mod.rs
rust/src/ui/diff_viewer/: file_list.rs  highlight_cache.rs  mod.rs  panel.rs  render_list.rs  search.rs
rust/src/ui/local_diff/: keybinds.rs  mod.rs
rust/src/ui/picker/: mod.rs
script/: lint
src/: config.rs  main.rs
src/git/: diff.rs  (+4 more)
(+84 files in other folders)
