[package]
name = "gg"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# GitHub API
octocrab = "0.44"

# Copilot SDK
github-copilot-sdk = { git = "https://github.com/github/copilot-sdk.git", package = "github-copilot-sdk", subdirectory = "rust" }

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig", "yaml-load"] }
two-face = "0.5"

# Markdown
pulldown-cmark = "0.12"

# Utilities
unicode-width = "0.2"
fuzzy-matcher = "0.3"
regex = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
libc = "0.2"
unicode-segmentation = "1.13.2"
tui-markdown = "0.3.6"
itertools = "0.14.0"
